--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
 * @Author: MacBook Air
 * @Date:   2017-12-12 14:58:15
 * @Last Modified by:   MacBook Air
-* @Last Modified time: 2017-12-13 19:53:57
+* @Last Modified time: 2017-12-18 20:43:06
 */
 @font-face {
   font-family: 'iconfont';  /* project id 507237 */
@@ -13,7 +13,7 @@
   url('https://at.alicdn.com/t/font_507237_wvsyb4tel2kb7qfr.svg#iconfont') format('svg');
 }
 .head{
-	width: 100%;/* 父和元素同等大小 */
+	width: 100%;/* 和父元素同等大小 */
 	height: 40px;
 	/* background-color: rgba(0,0,0,5); */
 	background-color: #333;
@@ -37,16 +37,22 @@
 	float: left;
 	margin-right: 16px;
 }
+.head-wenzi:hover{
+	color: #fff;
+}
 .head-right{
 	float: right;
 }
 .car{
 	width: 120px;
-	height: 40px;
-	
+	height: 40px;	
 	float: left;
 	line-height: 40px;
 	text-align: center;
+	background-color: rgba(0, 0, 0, .6);
+}
+.car:hover{
+	background-color: #fff;
 }
 .nav{
 	width: 1226px;
@@ -72,7 +78,12 @@
 	line-height: 100px;
 	padding: 0 10px;
 	cursor: pointer;/* 鼠标成为手 */
-
+}
+.car:hover {
+	color: orange;
+}
+.nav-wenzi:hover{
+	color: #ff6700;
 }
 .nav-right{
 	width: 296px;
@@ -80,9 +91,38 @@
 	float: right;
 	margin-top: 25px;
 	background-color: #fafafa;
-	line-height: 50px;
-	text-align: center;
 }
+.nav-right:hover input{
+	border-color: #b0b0b0;
+}
+.nav-search1{
+	width: 223px;
+	height: 48px;
+	/* box-sizing: border-box; *//* 浏览器会自动解析padding、border到盒子中 */
+	background-color: #fff;
+	float: left;
+	padding: 0 10px;
+}
+.nav-search2{
+	width: 48px;
+	height: 50px;
+	background-color: #fff;
+    float: left;
+}
+.nav-search2:hover{
+	background-color: #ff6700;
+	color: #fff;
+}
+.nav-search .nav-search1{
+	border: 1px solid #e0e0e0;
+}
+.nav-search .nav-search2{
+	border: 1px solid #e0e0e0;
+}
+.nav-search .search{
+	border-left: 0;
+}
+
 .danpin{
 	width: 1226px;
 	height: 438px;
@@ -92,7 +132,7 @@
 	width: 100%;
 	height: 58px;
 	line-height: 58px;
-	color: #333;
+	/* color: #333; */
 }
 .danpin-title{
 	font-size: 22px;
@@ -100,8 +140,8 @@
 	float: left; 
 }
 .danpin-jiantou{
-    width: 72px;
-    height: 25px;
+    /* width: 72px;
+    height: 25px; */
     background-color: yellowgreen;
     float: right;
     margin-top: 16.5px;
@@ -115,13 +155,13 @@
 	box-sizing: content-box;
     cursor: pointer;
     float: left;
-
-
+}
+.danpin-jiantou button:hover{
+	color: #ff6700;
 }
 .danpin-bottom{
 	width: 100%;
 	height: 380px;
-	background-color: #fff;
 }
 .danpin-item{
 	width: 234px;
@@ -183,6 +223,9 @@
 	font-size: 14px;
 	color: #b0b0b0;
 }
+.car:hover .head-buy{
+	color: #ff6700;
+}
 .icon-cart:before{
 	margin-right: 5px;
 }
@@ -198,7 +241,10 @@
 	height: 100%;
 	background-color: #5f5750;
 	float: left;
-
+	/* transition: box-shadow .2s linear; */
+}
+.bannerList li:hover{
+	box-shadow: 0 15px 30px rgba(0, 0, 0, .1)
 }
 .bannerList li:nth-child(1){
 	width: 228px;
@@ -223,6 +269,11 @@
 	padding-top: 18px;
 	float: left;
 }
+
+.banner-icon:hover span{
+	color: #fff;
+}
+
 .banner-icon .banner-shouji{
 	font-size: 24px;
 	font-weight: bolder;
@@ -235,4 +286,632 @@
 	color: rgba(255,255,255,0.7);
 	display: block;
 	text-align: center;
+}
+#box{
+	width: 100%;
+	background-color: #f5f5f5;
+}
+.jiadian{
+	width: 1226px;
+	height: 686px;
+	margin: auto;
+
+}
+.jiadian-top{
+	width: 100%;
+	height: 58px;
+}
+.jiadian-top h1{
+  font-size: 22px;
+  font-weight: 200;
+  line-height: 58px;
+  color: #333;
+  float: left;
+}
+.jiandian-xuan{
+	float: right;
+	margin-top: 16px;
+}
+
+.jiandian-xuan span{
+	float: left;
+	margin-left: 30px;
+	font-size: 16px;
+	color: #424242;
+}
+.jiandian-xuan span:hover{
+	border-bottom: 2px solid orange;
+ 	color: orange;
+
+}
+.jiandian-xuan .jiadian-xuan-active{
+ 	border-bottom: 2px solid orange;
+ 	color: orange;
+}
+.jiandian-bottom{
+	width: 100%;
+	height:628px;
+}
+.jiandian-left{
+	width: 234px;
+	height: 614px;
+	float: left;
+	position: relative;
+}
+.jiandian-right{
+	width: 992px;
+	height: 614px;
+	float: left
+}
+.jiadian-item{
+	width: 234px;
+	height: 266px;
+	background-color: #fff;
+	margin-left: 14px;
+	padding-top: 34px;
+	float: left;
+	margin-bottom: 14px;
+	position: relative;
+	overflow: hidden;
+}
+.jiadian-item .display{
+	width: 100%;
+	height: 76px;
+	background-color: #ff6700;
+	position: absolute;
+	bottom: -76px;
+	transition: all .3s linear;
+	opacity: 0;
+}
+.jiadian-item:hover{
+	transform: translateY(-2px);
+	box-shadow: 0 15px 30px rgba(0, 0, 0, .1);
+}
+.jiandian-left,.jiadian-item{
+	transition: all .3s linear;
+}
+.jiandian-left:hover{
+	transform: translateY(-2px);
+	box-shadow: 0 15px 30px rgba(0, 0, 0, .1);
+} 
+.jiadian-item:hover .display{
+	opacity: 1;/* 不透明 */
+	bottom: 0;
+}
+.jiadian-item-s:hover{
+	transform: translateY(-2px);
+	box-shadow: 0 15px 30px rgba(0, 0, 0, .1);
+}
+
+.display p{
+	width: 157px;
+	height: 30px;
+	font-size: 12px;
+	color: #fff;
+	margin-left: 30px;
+	margin-top: 11px;
+}
+.display span{
+	font-size: 12px;
+	color: rgba(255, 255, 255, .6);
+	margin-left: 30px;
+}
+.jiadian-item1{
+	display: block;
+	width: 150px;
+	height: 156px;
+	margin: 0 auto;
+}
+.jiadian-item2{
+	display: block;
+	text-align: center;
+	color: #333;
+	font-size: 14px;
+	font-weight: 400;
+	margin-top: 18px;
+
+}
+.jiadian-item3{
+	text-align: center;
+	font-size: 12px;
+	color: #b0b0b0;
+}
+.jiadian-item4{
+	display: block;
+	text-align: center;
+	color: orange;
+	font-size: 14px;
+	margin-top: 10px;
+}
+.jiadian-item-s{
+	width: 234px;
+	height: 93px;
+	background-color: #fff;
+	margin-left: 14px;
+	margin-bottom: 14px;
+	float: left;
+	padding-top: 50px;
+	transition: all .3s linear;
+
+}
+/* .zhoubian .item-s{
+	height: 143px;
+} */
+.jiadian-img{
+	width: 80px;
+	height: 80px;
+	background-color: #fff;
+	float: right;
+	margin-right: 20px;
+}
+.jiadian-wenzi{
+	float: left;
+	margin-left: 30px;
+}
+.jiadian-wenzi .jiadian-item2{
+	text-align: center; 
+	margin: 0;
+}
+.zhineng .jiadian-item:nth-child(1){
+	margin-left:0;
+	padding: 0;
+	height: 300px;
+}
+.zhineng .jiadian-item:nth-child(6){
+	margin-left:0;
+	padding: 0;
+	height: 300px;
+}
+.tuijian .danpin-item{
+	border: 0;
+	transition: all .3s linear;
+}
+.tuijian .danpin-item:hover{
+	transform: translateY(-2px);
+	box-shadow: 0 15px 30px rgba(0, 0, 0, .1);
+}
+.tuijian .danpin-item3{
+	font-size: 14px;
+	color: orange;
+	margin-top: 10px;
+	font-weight: 400;
+}
+.tuijian .danpin-item4{
+	font-size: 14px;
+	color: #b0b0b0;
+	font-weight: 400;
+}
+.reping{
+	width: 1226px;
+	height: 487px;
+	margin: auto;
+}
+.reping-top{
+	width: 1226px;
+	height: 58px;
+	line-height: 58px;
+}
+.reping-top h1{
+	font-size: 22px;
+	font-weight: 200;
+	color: #333;
+}
+.repin-bottom{
+	width: 1226px;
+	height: 429px;
+}
+.reping-item{
+	width: 296px;
+	height: 415px;
+	background-color: #fff;
+	float: left;
+	margin-bottom: 14px;
+	margin-right: 14px;
+	transition: all .3s linear;
+}
+.reping-item:hover{
+	transform: translateY(-2px);
+	box-shadow: 0 15px 30px rgba(0, 0, 0, .1);
+}
+.reping-item:nth-child(4){
+	margin-right: 0;
+}
+.reping-item-img{
+	width: 296px;
+	height: 220px;
+	background-color: #fff;
+}
+.reping-item1{
+	width: 240px;
+	height: 72px;
+	/* background-color: blue; */
+	margin-left: 28px;
+	margin-top: 30px;
+	font-size: 14px;
+	color: red;
+}
+.reping-item2{
+	font-size: 12px;
+	color: #ccc;
+	margin-left: 28px;
+}
+.reping-item3{
+	margin-left: 28px;
+	font-size: 14px;
+	margin-top: 8px;
+}
+.lianjiecolor{
+	color: #333;
+}
+.reping-item3 span:nth-child(2){
+	color: #ccc;
+}
+.reping-item3 span:nth-child(3){
+	color: orange;
+}
+.neirong{
+	width: 1226px;
+	height: 492px;
+	margin: auto;
+}
+.neirong-top{
+	width: 1226px;
+	height: 58px;
+	line-height: 58px;
+
+}
+.neirong-top h1{
+	font-size: 22px;
+	font-weight: 200;
+	color: #333;
+}
+.neirong-bottom{
+	width: 1226px;
+	height: 434px;
+}
+.neirong .neirong-item{
+	width: 296px;
+	height: 374px;
+	background-color: #fff;
+	border-top: 1px solid #ffac13;
+	text-align: center;
+	padding-top: 45px;
+	margin-bottom: 14px;
+	float: left;
+	margin-right: 14px;
+	position: relative;
+	transition: all .3s linear;
+}
+.neirong-item:hover{
+	transform: translateY(-2px);
+	box-shadow: 0 15px 30px rgba(0, 0, 0, .1);
+}
+.neirong .neirong-jiantou-left{
+	width: 21px;
+	height: 49px;
+	position: absolute;
+	left: 0;
+	top: 0;
+	bottom: 0;
+	margin: auto;
+	text-align: center;
+	line-height: 49px;
+	background-image: none;
+}
+.neirong .neirong-jiantou-right{
+	width: 21px;
+	height: 49px;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	margin: auto;
+	text-align: center;
+	line-height: 49px;
+	background-image: none;
+}
+.neirong-item .neirong-jiantou-size{
+	font-size: 24px;
+	color: #fff;
+	font-weight: 500;
+}
+.neirong .swiper-pagination-bullet-active{
+	background-color: #fff;
+	border: 2px solid #ff6700;
+
+
+}
+.neirong-item:hover .neirong-jiantou-left{
+	background-color: #ccc;
+}
+.neirong-item:hover .neirong-jiantou-right{
+	background-color: #ccc;
+}
+.neirong-bottom .neirong-jiantou-left:hover{
+	background-color: #333;
+}
+.neirong-bottom .neirong-jiantou-right:hover{
+	background-color: #333;
+}
+.neirong .item9{
+	margin-right: 0;
+}
+.neirong-item h1{
+	font-size: 16px;
+	font-weight: 400;
+	color: #ffac13;
+	margin-bottom: 18px;
+}
+.neirong-item1{
+	font-size: 20px;
+	font-weight: 400;
+	color: #333;
+	margin-top: 18px;
+}
+.neirong-item2{
+	display: block;
+	font-size: 12px;
+	color: #b0b0b0;
+	margin-left: 48px;
+	margin-right: 48px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+.neirong-item3{
+	color: #333;
+	margin-bottom: 15px;
+}
+.neirong-item4{
+	width: 216px;
+	height: 154px;
+	margin: 0 auto;
+}
+.neirong-item5{
+	width: 58px;
+	height: 10px;
+	margin: 30px auto 0;
+}
+.neirong-item6{
+	width: 6px;
+	height: 6px;
+	background-color: #b0b0b0;
+	float: left;
+	border-radius: 50%;
+	cursor: pointer;
+}
+.neirong-item6:hover{
+	background-color:orange;
+	/* cursor: pointer; */
+}
+.item7{
+	margin-right: 18px;
+	margin-left: 18px;
+	border: 2px solid orange; 
+	background-color: #fff;  
+}
+.item8{
+	margin-top: 2px;
+}
+.shipin{
+	width: 1226px;
+	height: 357px;
+	margin: 0 auto;
+}
+.shipin-top{
+	width: 100%;
+	height: 58px;
+	line-height: 58px;
+}
+.shipin-top h1{
+	font-size: 22px;
+	font-weight: 200;
+	color: #333;
+}
+.shipin-bottom{
+	width: 1226px;
+	height: 285px;
+}
+
+.shipin-item{
+	width: 296px;
+	height: 285px;
+	background-color: #fff;
+	text-align: center;
+	margin-bottom: 14px;
+	float: left;
+	margin-right: 14px;
+	position: relative;
+	transition: all .3s linear;
+}
+.shipin-item:hover{
+	transform: translateY(-2px);
+	box-shadow: 0 15px 30px rgba(0, 0, 0, .1);
+}
+.shipin-btn{
+	width: 36px;
+	height: 24px;
+ /* background-color: red; */
+	/* border-radius: 99%; */
+	/* border: 2px solid #ff6700; */
+	position: absolute;
+	left: 20px;
+	bottom: 122px;
+}
+.shipin-btn .shipin-btn1{
+	font-size: 30px;
+	color: #fff;
+}
+.shipin-img:hover .shipin-btn1{
+	color: #ff6700;
+}
+.shipinitem{
+	margin-right: 0;
+}
+.shipin-img{
+	width: 296px;
+	height: 180px;
+	cursor: pointer;
+}
+
+.shipin-wenzi{
+	color: #333;
+	display: block;
+	margin-bottom: 6px;
+	margin-top: 40px;
+	font-size: 14px;
+	font-weight: 400;
+}
+.shipin-wenzi:hover{
+	color: #ff6700;
+}
+.shipin-item span{
+	display: block;
+	font-size: 12px;
+	color: #b0b0b0;
+}
+.banner{
+	width: 1226px;
+	height: 460px;
+	background-color: yellow;
+	margin: 0 auto;
+	position: relative;
+}
+.banner-img{
+	width: 100%;
+	height: 100%;
+	background-color: gold;
+}
+.banner-item{
+	width: 100%;
+	height: 100%;
+	background-color: gold;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+.banner-nv{
+	width: 234px;
+	height: 420px;
+	background-color: rgba(0, 0, 0, .5);
+	position: absolute;
+	left: 0;
+	top: 0;
+	z-index: 999;
+	padding: 20px 0;
+}
+.banner-nv li{
+	width: 234px;
+	height: 42px;
+	line-height: 42px;
+}
+.banner-nv li:hover{
+	background-color: #ff6700;
+}
+.banner-nv-wenzi{
+	display: block;
+	width: 174px;
+	height: 42px;
+	padding: 0 30px;
+	font-size: 14px;
+	color: #fff;
+}
+
+.banner-nv-wenzi span:nth-child(2){
+	float: right;
+	font-weight: 800;
+	font-size: 16px;
+}
+.banner .bannner-img-jiantou-left{
+	width: 41px;
+	height: 69px;
+/* 	background-color: red; */
+	position: absolute;
+	left: 234px;
+	top: 0;
+	bottom: 0;
+	margin: auto;
+	line-height: 69px;
+	text-align: center;
+	background-image: none;
+
+}
+.banner .bannner-img-jiantou-right{
+	width: 41px;
+	height: 69px;
+	position: absolute;
+	right: 0px;
+	top: 0;
+	bottom: 0;
+	margin: auto;
+	line-height: 69px;
+	text-align: center;
+	overflow: hidden;
+	background-image: none;
+}
+.bannner-img-jiantou-left .banner-wenzi-size{
+	font-size: 40px;
+	color: #b0b0b0;
+	font-weight: 100;
+	padding-top: 14.5px;
+}
+.bannner-img-jiantou-right .banner-wenzi-size{
+	font-size: 40px;
+	color: #b0b0b0;
+	font-weight: 100;
+}
+.icon-zuoyoujiantou-copy-copy:before{
+	padding: 14.5px 0;
+}
+.icon-you:before {
+	padding: 14.5px 0;
+}
+.bannner-img-jiantou-right:hover{
+	background-color: rgba(0, 0, 0, .4)
+
+}
+.bannner-img-jiantou-left:hover{
+	background-color: rgba(0, 0, 0, .4)
+
+}
+.bannner-img-jiantou-left .banner-wenzi-size:hover{
+	color: #fff;
+}
+.bannner-img-jiantou-right .banner-wenzi-size:hover{
+	color: #fff;
+}
+.banner .banner-lunbodain{
+	width: 120px!important;
+	height: 10px;
+	position: absolute;
+	right: 30px;
+	bottom: 20px!important;
+	left: auto!important;
+}
+.banner-lunbodian-item{
+	/* display: block; */
+	width: 6px;
+	height: 6px;
+	border: 2px solid #c3a5ac;
+	margin: 0 5px;
+	border-radius: 50%;
+	background-color: #666;
+	float: left;
+}
+.banner-lunbodian-item:hover{
+	background-color: #fff;
+	border: 2px solid #666;
+}
+.banner-lunbodian-item:nth-child(1){
+	background-color: #fff;
+	border: 2px solid #666;
+}
+.banner .swiper-pagination-bullet{
+	width: 6px;
+	height: 6px;
+	border: 2px solid rgba(255, 255, 255, .3);
+	background-color: rgba(0, 0, 0, 0.4);
+}
+.banner.swiper-pagination-bullet-active{
+	border: 2px solid rgba(0, 0, 0, .4);
+	background-color:#fff
 }
